--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,6 @@ compatibility_date = "2025-06-01"
 assets.directory = "./"
 dev.port = 3000
 routes = [
-  { pattern = "googllm.com", custom_domain = true },
-  { pattern = "www.googllm.com", custom_domain = true }
+  { pattern = "rendermd.com", custom_domain = true },
+  { pattern = "www.rendermd.com", custom_domain = true }
 ]
